# ppx_derive_at_runtime

./: README.md  README.mdx  ppx_derive_at_runtime.opam
example/: comparison.ml  comparison.mli  dune  ppx_derive_at_runtime_example.ml  sample.ml  sample.mli  serialization.ml  serialization.mli  size.ml  size.mli
for-doc/: dune  ppx_derive_at_runtime_for_doc.ml
lib/: dune  ppx_derive_at_runtime_lib.ml  ppx_derive_at_runtime_lib.mli  ppx_derive_at_runtime_lib_intf.ml
locally/: dune  ppx_derive_at_runtime_locally.ml
src/: dune  ppx_derive_at_runtime.ml  ppx_derive_at_runtime.mli
test/: dune  test_expansion.ml  test_expansion.mli  test_runtime.ml  test_runtime.mli
